fixed header to align in center

--- a/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
+++ b/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
@@ -7,9 +7,12 @@
         display: flex
         flex-flow: row
         justify-content: space-between
+        align-items: center
     .thead .tr
         align-items: flex-end
         padding: 10px
+        align-items: center
+        font-weight:800
     .thead p, 
     .tbody p
         margin: 0
@@ -25,6 +28,8 @@
     background: $light-gray-color
     
 .theme-table.open-workspace
+    .th-column
+        font-weight: bold
     .workspace-name
         width: 60%
         a:not(.sort-ap)
